# focusfive

./: .gitignore  AGENTS.md  ARCHITECTURE_MINDMAP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATA_MODEL.md  DATA_MODEL_VISUAL.md  DEBUG_INDICATOR_UPDATE.md  DEVELOPER_DOCUMENTATION.md  LICENSE  MISSING_FUNCTIONALITY_RESEARCH.md  PROFESSIONAL_UI_RESEARCH.md  QUICK_START_GUIDE.md  README.md  README_FOR_NEW_USERS.md  SOURCE_CODE.md  USER_GUIDE.md  UX_UI_FLOW_DIAGRAM.md  create_test_data.sh  init_data_capture.sh  research_objectives_indicators.md  rust-analyzer.json  switch_to_rustup.sh  validate_setup.sh  value_display_fix.md
.serverless/: meta.json
docs/: FocusFive_MVP_Build_Plan.md  FocusFive_V2_PRD.md
examples/: templates-example.json
src/: app.rs  data.rs  data_capture.rs  data_fixed.rs  lib.rs  main.rs  models.rs  ui.rs  ui_old.rs  ui_state.rs
tests/: action_identity_tests.rs  controller_save_integration.rs  copy_from_yesterday_test.rs  critical_parser_fixes.rs  crud_test.rs  dashboard_focus_tests.rs  data_capture_integration.rs  day_meta_tests.rs  enhanced_action_status_tests.rs  enhanced_ritual_phases_test.rs  error_handling_validation.rs  file_io_validation.rs.skip  indicator_management_tests.rs  indicators_observations_tests.rs  mac_keyboard_compatibility_test.rs  markdown_parser_edge_cases.rs  objective_creation_integration.rs  objectives_integration_tests.rs  objectives_tests.rs  objectives_ui_integration_tests.rs  observations_integration_tests.rs  panic_recovery_tests.rs  parser_verification.rs  regression_tests.rs  reviews_tests.rs  ritual_phase_test.rs  (+7 more)
(+42 files in other folders)
