[package]
name = "focusfive"
version = "0.1.0"
edition = "2021"
authors = ["Peter Correia"]
license = "MIT"
description = "A minimalist terminal-based goal tracking system with AI-powered insights"
repository = "https://github.com/YOUR_USERNAME/goal_setting"
keywords = ["goals", "productivity", "tui", "terminal", "tracking"]
categories = ["command-line-utilities", "productivity"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
regex = "1"
directories = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "focusfive"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true